[package]
name = "rust-playground"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zstd = "0.11"
# zstd = { path = "../zstd-rs" }
base64 = "0.13.0"
radix64 = "0.3.0"
# solana-account-decoder = "1.14.7"
